--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,9 @@
 body {
   background-color: lightblue;
 }
-div {
- margin: 20px;
+#nav-table {
+ width: 800px;
+}
+#nav-td {
+  width: 200px; text-align:center;
 }
