--- a/style1.css
+++ b/style1.css
@@ -9,8 +9,9 @@ body {
   width: 200px; text-align:center;
 }
 #header {
- align:center;
- margin: auto;
- width: 800px;
+ display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
   
