--- a/style1.css
+++ b/style1.css
@@ -3,7 +3,7 @@ body {
   background-color: lightblue;
 }
 #nav-table {
- width: 800px;
+ width: 100%;
 }
 #nav-td {
   width: 200px; text-align:center;
