--- a/style1.css
+++ b/style1.css
@@ -4,6 +4,8 @@ body {
 }
 #nav-table {
  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 #nav-td {
   width: 400px; text-align:center;
