--- a/style1.css
+++ b/style1.css
@@ -6,6 +6,7 @@ body {
  width: 100%;
   margin-left: auto;
   margin-right: auto;
+ background-color: white
 }
 #nav-td {
   width: 400px; text-align:center;
