--- a/style1.css
+++ b/style1.css
@@ -22,3 +22,12 @@ body {
   #pic1-td {
    margin: auto;
 }
+#pic2-td {
+   margin: auto;
+}
+#pic3-td {
+   margin: auto;
+}
+#pic4-td {
+   margin: auto;
+}
