--- a/style1.css
+++ b/style1.css
@@ -2,6 +2,11 @@ body {
  
   background-color: lightblue;
 }
+
+#background {
+ 
+
+
 #nav-table {
  width: 100%;
   margin-left: auto;
@@ -27,10 +32,10 @@ body {
  padding: 30px;
 }
 #pic3-td {
-   padding: 30px;
+   padding: 60px;
 }
 #pic4-td {
-   padding: 30px;
+   padding: 60px;
 }
 #pic-table {
  margin-left: auto;
