--- a/style1.css
+++ b/style1.css
@@ -33,10 +33,12 @@ body {
 }
 #pic3-td {
    padding: 60px;
+ float: left;
 }
 #pic4-td {
    padding: 60px;
  height: 400px;
+ float: right;
 }
 
    
