--- a/style1.css
+++ b/style1.css
@@ -24,21 +24,22 @@ body {
   margin-right: auto;
   width: 100%;
 }
-  #pic1-td {
+  #pic1 {
   padding: 30px;
    
 }
-#pic2-td {
+#pic2 {
  padding: 30px;
 }
-#pic3-td {
+#pic3 {
    padding: 30px;
  
 }
-#pic4-td {
+#pic4 {
    padding: 30px;
 
 }
 
-   
+
+ 
  
