--- a/style1.css
+++ b/style1.css
@@ -26,17 +26,20 @@ body {
 }
   #pic1 {
   padding: 30px;
+   width: 300px
    
 }
 #pic2 {
  padding: 30px;
+ width:300px
 }
 #pic3 {
    padding: 30px;
- 
+ width:300px
 }
 #pic4 {
    padding: 30px;
+ width:300px
 
 }
 
