--- a/style1.css
+++ b/style1.css
@@ -27,12 +27,15 @@ body {
   #pic1 {
   padding: 30px;
    width: 300px
+   margin: 10px;
+   
     
    
 }
 #pic2 {
  padding: 30px;
  width:300px
+  margin: 10px;
  
 }
 #pic3 {
