--- a/style1.css
+++ b/style1.css
@@ -30,9 +30,6 @@ body {
   padding: 30px;
    width: 300px
    margin: 10px;
-   
-    
-   
 }
 #pic2 {
  padding: 30px;
@@ -49,6 +46,10 @@ body {
  width:300px
 
 }
+#AboutMe {
+ color: white;
+}
+
 
 
  
